# compiz

./: .cvsignore  .gitignore  AUTHORS  COPYING  COPYING.MIT  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  RELEASING  TODO  autogen.sh  compiz-cube.pc.in  compiz-gconf.pc.in  compiz-kconfig.pc.in  compiz-scale.pc.in  compiz.pc.in  configure.ac
gettext/its/: compiz-reloaded.its  compiz-reloaded.loc  compiz.its  compiz.loc
gnome/: Makefile.am  compiz-window-manager.c  compiz-window-manager.h  compiz.desktop.in
gnome/window-decorator/: Makefile.am  gnome-window-decorator.c
gtk/: Makefile.am
gtk-window-decorator/: Makefile.am  TODO  gtk-window-decorator.c
gtk/gnome/: 50-compiz-desktop-key.xml.in  50-compiz-key.xml.in  Makefile.am  compiz-window-manager.c  compiz-wm.desktop.in
gtk/mate/: Makefile.am  compiz.desktop.in  mate-window-decorator  mate-window-decorator.desktop.in
gtk/window-decorator/: .cvsignore  Makefile.am  gtk-window-decorator.c  gwd.schemas.in  org.compiz-0.gwd.gschema.xml
icons/: Makefile.am
images/: Makefile.am
include/: Makefile.am  compiz-core.h  compiz-cube.h  compiz-plugin.h  compiz-scale.h  compiz.h  cube.h  decoration.h  scale.h
kde/: Makefile.am
kde/window-decorator/: .cvsignore  KWinInterface.h  Makefile.am  decorations.cpp  decorations.h  decorator.cpp  decorator.h  main.cpp  options.cpp  options.h  qdecorator.cpp  qdecorator.h  qdecorator.moc  qwmscreen.cpp  qwmscreen.h  qwmutils.cpp  qwmutils.h  qwmwindow.cpp  qwmwindow.h  utils.cpp  utils.h  window.cpp  window.h
kde/window-decorator-kde4/: Makefile.am  decorator.cpp  decorator.h  kdecoration_plugins.cpp  kdecoration_plugins.h  main.cpp  options.cpp  options.h  org.kde.KWin.xml  paintredirector.cpp  switcher.cpp  switcher.h  utils.cpp  utils.h  window.cpp  window.h
libdecoration/: Makefile.am  decoration.c  libdecoration.pc.in
mate/: Makefile.am  compiz.desktop.in
metadata/: Makefile.am  annotate.xml.in  blur.xml.in  clone.xml.in  commands.xml.in  compiz.metadata  compiz.xml.in  core.xml.in  core.xml.in.in  cube.xml.in  dbus.xml.in  decoration.xml.in  fade.xml.in  fs.xml.in  gconf.xml.in  glib.xml.in  gnomecompat.xml.in  ini.xml.in  inotify.xml.in  kcfg.xslt  kconfig.xml.in  kconfig.xslt  matecompat.xml.in  minimize.xml.in  move.xml.in  obs.xml.in  place.xml.in  plane.xml.in  png.xml.in  regex.xml.in  resize.xml.in  rotate.xml.in  scale.xml.in  schemas.xslt  screenshot.xml.in  svg.xml.in  switcher.xml.in  video.xml.in  wall.xml.in  water.xml.in  (+2 more)
plugins/: .cvsignore  Makefile.am  annotate.c  blur.c  clone.c  commands.c  compiz-decorator  compiz.schemas  compiz.schemas.in  compiz.schemas.in.in  cube.c  dbus.c  decoration.c  fade.c  fuse.c  gconf-compiz-utils.c  gconf-compiz-utils.h  gconf-dump.c  gconf.c  glib.c  gnomecompat.c  ini.c  inotify.c  kconfig.cpp  matecompat.c  minimize.c  move.c  obs.c  place.c  plane.c  png.c  regex.c  resize.c  rotate.c  scale.c  screenshot.c  svg.c  switcher.c  video.c  wall.c  (+5 more)
po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  af.po  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  compiz.pot  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  km.po  (+27 more)
scripts/: Makefile.am  compiz-decorator-gtk  compiz-mate-gtk  compiz-mate-gtk.desktop.in  gtk-decorator.desktop.in
src/: .cvsignore  Makefile.am  action.c  compiz-start.desktop.in  core.c  cursor.c  display.c  event.c  fragment.c  main.c  match.c  matrix.c  metadata.c  object.c  option.c  paint.c  plugin.c  privates.c  readpng.c  screen.c  session.c  texture.c  window.c
